2012年9月27日 杉本祐介 ・災害モードにおいて、各種手動登録に対応した ・災害モードにおいて、バーコードリーダによる出席確認に対応した ・災害モードにおいて、出席データのインポート/エクスポートに対応した ・取得する位置情報から高度を削除した

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,11 @@
+2012年9月27日 杉本祐介
+・災害モードにおいて、各種手動登録に対応した
+・災害モードにおいて、バーコードリーダによる出席確認に対応した
+・災害モードにおいて、出席データのインポート/エクスポートに対応した
+・取得する位置情報から高度を削除した
+
 2012年9月26日 杉本祐介
-・リストからの手動登録に対応
+・リストからの手動登録に対応した
 
 2012年8月23日 杉本祐介
 ・Galaxy Nexus向けのコードを追加した
