2012年10月2日 杉本祐介 ・災害モードにおいて、出席データ追加時にサーバに送信するようにした ・リスト作成画面において、各種手動登録に対応した ・リスト作成画面において、学籍番号を読み取った際の挙動を修正した ・自動スクロールの挙動を修正した

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,8 @@
 2012年10月2日 杉本祐介
+・災害モードにおいて、出席データ追加時にサーバに送信するようにした
 ・リスト作成画面において、各種手動登録に対応した
 ・リスト作成画面において、学籍番号を読み取った際の挙動を修正した
+・自動スクロールの挙動を修正した
 
 2012年10月1日 杉本祐介
 ・災害モードにおいて、ファイル名順にリストを読み込むようにした
