2012年10月4日 杉本祐介 ・学籍番号での検索に対応した ・パスワードの変更に対応した ・出席確認画面において、各種手動登録に対応した ・出席確認画面において、バーコードリーダによる出席確認に対応した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2012年10月4日 杉本祐介
+・学籍番号での検索に対応した
+・パスワードの変更に対応した
+・出席確認画面において、各種手動登録に対応した
+・出席確認画面において、バーコードリーダによる出席確認に対応した
+
 2012年10月2日 杉本祐介
 ・災害モードにおいて、出席データ追加時にサーバに送信するようにした
 ・リスト作成画面において、各種手動登録に対応した
