--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,6 +45,16 @@
     <string name="setting_disaster_title">災害設定</string>
     <string name="setting_disaster_mode_title">災害モードを有効にする</string>
     <string name="setting_disaster_mode_summary">災害モードを有効にします。</string>
+    <string name="setting_password_title">パスワードの変更</string>
+    <string name="setting_password_registered">設定済み</string>
+    <string name="setting_password_not_registered">未設定(test1234)</string>
+    <string name="setting_password_old_password">旧パスワード:</string>
+    <string name="setting_password_old_password_hint">旧パスワードを入力</string>
+    <string name="setting_password_new_password">新パスワード:</string>
+    <string name="setting_password_new_password_hint">新パスワードを入力(16文字まで)</string>
+    <string name="setting_password_new_password_conf">新パスワード(確認):</string>
+    <string name="setting_password_new_password_conf_hint">新パスワードをもう一度入力</string>
+    <string name="setting_password_available_character">パスワードには、半角英数字およびアンダーバーが利用可能です。</string>
     <string name="setting_ip_address_title">IPアドレス</string>
     <string name="setting_other_title">その他</string>
     <string name="setting_license_title">ライセンス表記</string>
@@ -167,10 +177,14 @@
     <string name="error_illegal_directory_name">フォルダ名に使用できない文字が含まれています。</string>
     <string name="error_directory_name_null">フォルダ名が入力されていません。</string>
     <string name="error_list_file_not_found">リストファイルが見つかりません</string>
+    <string name="error_old_password_not_match">旧パスワードが間違っています。</string>
+    <string name="error_new_password_not_match">新パスワードが一致しません。</string>
+    <string name="error_long_password">新パスワードが長すぎます。</string>
     <string name="error_launch_camera_failed">カメラの起動に失敗しました</string>
     <string name="error_set_preview_failed">プレビュー画面の設定に失敗しました</string>
 
     <string name="alphabet_and_number">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
+    <string name="character_for_password">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_</string>
     <string name="zero">0</string>
     <string name="one">1</string>
     <string name="two">2</string>
