--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2012年10月18日 杉本祐介
+・災害モードにおいて、追加読み込みが行えない不具合を修正した
+
 2012年10月17日 杉本祐介
 ・出席確認画面からリスト作成画面に遷移する際、CSVファイルが開かれていた場合はそのファイルを開くようにした
 ・編集したリストを保存する際、元にしたリストがある場合は、最初に上書きを行うかどうか確認するようにした
