--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -158,6 +158,8 @@
     <string name="dialog_input_student_info_title">手動での登録</string>
     <string name="dialog_ask_register_read_id">リストにないNFCタグを読み取りました。読み取ったNFCタグをリストに登録しますか?</string>
     <string name="dialog_register_id_menu_title">NFCタグの登録</string>
+    <string name="dialog_register_id_menu_barcode">バーコードを読み取る</string>
+    <string name="dialog_reading_barcode">登録する学生のバーコードを読み取ってください。\n(バックボタンで中止)</string>
 
     <string name="notice_location_fetched">現在地を取得しました</string>
     <string name="notice_add_location_disabled">\"位置情報を付加する\"は無効になりました</string>
@@ -180,6 +182,7 @@
     <string name="error_opening_failed">を開けませんでした</string>
     <string name="error_saving_failed">への保存に失敗しました</string>
     <string name="error_saving_data_null">保存するデータがありません</string>
+    <string name="error_student_not_found">対応する学生データが見つかりません</string>
     <string name="error_id_register_failed">NFCタグの登録に失敗しました</string>
     <string name="error_file_already_exists">既に同名のファイルが存在します。</string>
     <string name="error_file_create_failed">ファイルの作成に失敗しました。</string>
