2012年10月24日 杉本祐介 ・出席データをサーバに送信している状態で別のアクティビティを開くとクラッシュする不具合を修正した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2012年10月24日 杉本祐介
+・出席データをサーバに送信している状態で別のアクティビティを開くとクラッシュする不具合を修正した
+
 2012年10月22日 杉本祐介
 ・リスト外のNFCタグの登録を行う際、バーコードの読み取りによっても登録が行えるようにした
 
