2012年10月24日 杉本祐介 ・学生マスタを管理するクラスを追加した ・学生クラス、学生シートクラスにコピーを生成するコンストラクタを追加した ・リスト外の学籍番号を読み取った際の挙動を変更できるようにした ・未知のNFCタグを読み取った際の挙動を変更できるようにした ・出席データをサーバに送信している状態で別のアクティビティを開くとクラッシュする不具合を修正した ・リスト外のNFCタグの登録をバーコードによって行う際、ダイアログを閉じてもキャンセルされなかった不具合を修正した

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,10 @@
 2012年10月24日 杉本祐介
+・学生マスタを管理するクラスを追加した
+・学生クラス、学生シートクラスにコピーを生成するコンストラクタを追加した
+・リスト外の学籍番号を読み取った際の挙動を変更できるようにした
+・未知のNFCタグを読み取った際の挙動を変更できるようにした
 ・出席データをサーバに送信している状態で別のアクティビティを開くとクラッシュする不具合を修正した
+・リスト外のNFCタグの登録をバーコードによって行う際、ダイアログを閉じてもキャンセルされなかった不具合を修正した
 
 2012年10月22日 杉本祐介
 ・リスト外のNFCタグの登録を行う際、バーコードの読み取りによっても登録が行えるようにした
