2012年10月31日 杉本祐介 ・学生マスタ(旧学生リスト)のフォーマットを変更した ・学生マスタと受講者リストを分離した ・出席管理画面および災害モードにおいて、画面上部に科目名と授業時間を表示するようにした   表示部をタップすることで、内容を編集できるようになっている。 ・学生マスタを読み込み直す際、プログレスダイアログを表示するようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2012年10月31日 杉本祐介
+・学生マスタ(旧学生リスト)のフォーマットを変更した
+・学生マスタと受講者リストを分離した
+・出席管理画面および災害モードにおいて、画面上部に科目名と授業時間を表示するようにした
+  表示部をタップすることで、内容を編集できるようになっている。
+・学生マスタを読み込み直す際、プログレスダイアログを表示するようにした
+
 2012年10月24日 杉本祐介
 ・学生マスタを管理するクラスを追加した
 ・学生クラス、学生シートクラスにコピーを生成するコンストラクタを追加した
