2012年11月6日 杉本祐介 ・位置情報を添えて出席データを保存する際、出力しない列は詰めて出力するようにした ・AttendanceクラスからgetNfcIdsメソッドを削除した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2012年11月6日 杉本祐介
+・位置情報を添えて出席データを保存する際、出力しない列は詰めて出力するようにした
+・AttendanceクラスからgetNfcIdsメソッドを削除した
+
 2012年10月31日 杉本祐介
 ・学生マスタ(旧学生リスト)のフォーマットを変更した
 ・学生マスタと受講者リストを分離した
