2012年11月7日 杉本祐介 ・出席管理画面および災害モードにおいて、集計機能を実装した ・出席データを追加した際と出席種別を変更した際に、学生数などのカウントを更新するようにした ・各画面において、リスト内の文字が改行されないようにした ・学籍番号を入力するEditTextを複数回表示すると挙動がおかしくなる不具合を修正した ・出席管理画面において、ロングタップメニューからの出席種別の変更が正しく行えなかった不具合を修正した ・出席リストでは展開元のファイルのインスタンスを持たないようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2012年11月7日 杉本祐介
+・出席管理画面および災害モードにおいて、集計機能を実装した
+・出席データを追加した際と出席種別を変更した際に、学生数などのカウントを更新するようにした
+・各画面において、リスト内の文字が改行されないようにした
+・学籍番号を入力するEditTextを複数回表示すると挙動がおかしくなる不具合を修正した
+・出席管理画面において、ロングタップメニューからの出席種別の変更が正しく行えなかった不具合を修正した
+・出席リストでは展開元のファイルのインスタンスを持たないようにした
+
 2012年11月6日 杉本祐介
 ・位置情報を添えて出席データを保存する際、出力しない列は詰めて出力するようにした
 ・AttendanceクラスからgetNfcIdsメソッドを削除した
