--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -149,6 +149,10 @@
     <string name="dialog_edit_subject_hint">科目名を入力</string>
     <string name="dialog_edit_time_title">授業時間の編集</string>
     <string name="dialog_edit_time_hint">授業時間を入力</string>
+    <string name="dialog_totalization_title">確認状況</string>
+    <string name="dialog_totalization_class_label">所属</string>
+    <string name="dialog_totalization_total_label">合計</string>
+    <string name="dialog_totalization_whole">全体</string>
     <string name="dialog_create_file_title">新規ファイルの作成</string>
     <string name="dialog_create_file_hint">ファイル名を入力</string>
     <string name="dialog_create_directory_title">新規フォルダの作成</string>
