--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
 
     <string name="setting_title">設定画面</string>
     <string name="setting_general_title">一般設定</string>
+    <string name="setting_behavior_title">挙動設定</string>
     <string name="setting_behavior_student_no_title">リスト外学籍番号の読取</string>
     <string name="setting_behavior_student_no_dialog">ダイアログを表示する</string>
     <string name="setting_behavior_student_no_ignore">無視する</string>
@@ -50,6 +51,9 @@
     <string name="setting_change_attendance_dir_title">出席データの保存先</string>
     <string name="setting_change_attendance_name_title">出席データの保存名</string>
     <string name="setting_change_attendance_name_message">以下の変数が利用可能です。\n%S : 科目名, %t : 授業時間\n%y : 年, %M : 月, %d : 日\n%h : 時, %m : 分, %s : 秒\n拡張子は自動で付加されます。</string>
+    <string name="setting_auto_save_title">データを自動保存する</string>
+    <string name="setting_auto_save_summary">指定された時間毎に出席データを自動的に保存します。</string>
+    <string name="setting_auto_save_interval_title">自動保存の間隔</string>
     <string name="setting_disaster_title">災害設定</string>
     <string name="setting_disaster_mode_title">災害モードを有効にする</string>
     <string name="setting_disaster_mode_summary">災害モードを有効にします。</string>
