2012年11月11日 杉本祐介 ・PreferenceUtilクラスの一部メソッドの仕様を変更した

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2012年11月11日 杉本祐介
+・PreferenceUtilクラスの一部メソッドの仕様を変更した
+
 2012年11月10日 杉本祐介
 ・自動保存機能を実装した
 ・リストの枠線の色を変更した
@@ -56,7 +59,7 @@
 2012年10月10日 杉本祐介
 ・サーバに関しての設定項目を追加した
 ・送信に失敗した出席データを再送するようにした
-・PreferenceUtilの一部メソッドの仕様を変更した
+・PreferenceUtilクラスの一部メソッドの仕様を変更した
 
 2012年10月4日 杉本祐介
 ・学籍番号での検索に対応した
@@ -135,14 +138,14 @@
 ・位置情報の出力フォーマットを設定できるようにした
 ・CSVの読み込み/書き込みにOpenCSVを使用するようにした
 ・Apache Licenseを表示できるようにした
-・PreferenceUtilの各メソッドをスタティックメソッドから通常のメソッドに変更した
+・PreferenceUtilクラスの各メソッドをスタティックメソッドから通常のメソッドに変更した
 ・アプリをSDカードに移動できるようにした
 ・リスト表示時、連番が-1である場合は連番の値を表示しないようにした
 ・学生データの編集時、連番を空にすると強制終了する不具合を修正した
 
 2012年7月10日 杉本祐介
-・FileChooseActivityにフォルダ選択機能を追加した
-・FileChooseActivityにキャンセルボタンを追加した
+・ファイル選択画面にフォルダ選択機能を追加した
+・ファイル選択画面にキャンセルボタンを追加した
 ・出席データの保存先を設定できるようにした
 ・出席データの保存名を設定できるようにした
 ・位置情報の更新間隔を設定できるようにした
@@ -187,9 +190,9 @@
 ・ファイル作成時にトーストを表示するようにした
 
 2012年6月11日 杉本祐介
-・ファイル選択アクティビティにおいて、ソートを行うようにした
-・ファイル選択アクティビティにおいて、隠しファイルの表示非表示を選択できるようにした
-・ファイル選択アクティビティにおいて、拡張子を別に指定できるようにした
+・ファイル選択画面において、ソートを行うようにした
+・ファイル選択画面において、隠しファイルの表示非表示を選択できるようにした
+・ファイル選択画面において、拡張子を別に指定できるようにした
 ・拡張子が1つだけ指定されていた場合、新規ファイル作成時に自動で付加するようにした
 ・科目名と授業時間を1つのダイアログで設定できるようにした
 
@@ -199,7 +202,7 @@
 ・保存先を選択できるようにした
 
 2012年6月7日 杉本祐介
-・特定の条件下での自動スクロールの際に文字色が黒くなる不具合を修正
+・特定の条件下での自動スクロールの際に文字色が黒くなる不具合を修正した
 
 2012年6月6日 杉本祐介
 ・既に登録されている学籍番号が読み取られた場合、リスト上でそのデータを選択するようにした
