2012年11月14日 杉本祐介 1.8.1: ・学生マスタのインスタンスをアプリケーション全体で共有するようにした   これに伴い、CustomApplicationクラスを追加した。 ・学生マスタに読み込み時の各動作に対応したリスナクラスを追加した ・学生マスタにリスナに関するコンストラクタ/メソッドを追加した ・各アクティビティにおいて、onResumeで最新の学生マスタのインスタンスを取得するようにした ・学生マスタ再読み込み時のプログレスダイアログをバータイプのものにした ・スプラッシュ画面にプログレスバーを追加した ・スプラッシュ画面からメインの画面を呼び出す際、災害モードの設定状態をチェックするようにした ・学生登録画面実装への準備

--- a/history.txt
+++ b/history.txt
@@ -1,15 +1,31 @@
+2012年11月14日 杉本祐介
+1.8.1:
+・学生マスタのインスタンスをアプリケーション全体で共有するようにした
+  これに伴い、CustomApplicationクラスを追加した。
+・学生マスタに読み込み時の各動作に対応したリスナクラスを追加した
+・学生マスタにリスナに関するコンストラクタ/メソッドを追加した
+・各アクティビティにおいて、onResumeで最新の学生マスタのインスタンスを取得するようにした
+・学生マスタ再読み込み時のプログレスダイアログをバータイプのものにした
+・スプラッシュ画面にプログレスバーを追加した
+・スプラッシュ画面からメインの画面を呼び出す際、災害モードの設定状態をチェックするようにした
+・学生登録画面実装への準備
+
 2012年11月11日 杉本祐介
+1.8.0:
 ・PreferenceUtilクラスの一部メソッドの仕様を変更した
 
 2012年11月10日 杉本祐介
+1.8.0:
 ・自動保存機能を実装した
 ・リストの枠線の色を変更した
 ・上書き確認ダイアログ表示中に画面を回転させると保存に失敗する不具合を修正した
 
 2012年11月8日 杉本祐介
+1.7.1:
 ・自動保存機能実装への準備
 
 2012年11月7日 杉本祐介
+1.7.0:
 ・出席管理画面および災害モードにおいて、集計機能を実装した
 ・出席データを追加した際と出席種別を変更した際に、学生数などのカウントを更新するようにした
 ・各画面において、リスト内の文字が改行されないようにした
@@ -18,10 +34,12 @@
 ・出席リストでは展開元のファイルのインスタンスを持たないようにした
 
 2012年11月6日 杉本祐介
+1.6.1:
 ・位置情報を添えて出席データを保存する際、出力しない列は詰めて出力するようにした
 ・AttendanceクラスからgetNfcIdsメソッドを削除した
 
 2012年10月31日 杉本祐介
+1.5.1:
 ・学生マスタ(旧学生リスト)のフォーマットを変更した
 ・学生マスタと受講者リストを分離した
 ・出席管理画面および災害モードにおいて、画面上部に科目名と授業時間を表示するようにした
@@ -29,6 +47,7 @@
 ・学生マスタを読み込み直す際、プログレスダイアログを表示するようにした
 
 2012年10月24日 杉本祐介
+1.5.0:
 ・学生マスタを管理するクラスを追加した
 ・学生クラス、学生シートクラスにコピーを生成するコンストラクタを追加した
 ・リスト外の学籍番号を読み取った際の挙動を変更できるようにした
@@ -37,12 +56,15 @@
 ・リスト外のNFCタグの登録をバーコードによって行う際、ダイアログを閉じてもキャンセルされなかった不具合を修正した
 
 2012年10月22日 杉本祐介
+1.4.0:
 ・リスト外のNFCタグの登録を行う際、バーコードの読み取りによっても登録が行えるようにした
 
 2012年10月18日 杉本祐介
+1.3.1:
 ・災害モードにおいて、追加読み込みが行えない不具合を修正した
 
 2012年10月17日 杉本祐介
+1.3.0:
 ・出席確認画面からリスト作成画面に遷移する際、CSVファイルが開かれていた場合はそのファイルを開くようにした
 ・編集したリストを保存する際、元にしたリストがある場合は、最初に上書きを行うかどうか確認するようにした
 ・出席管理画面において、別のリストのNFCタグの読み取りに対応した
@@ -54,9 +76,11 @@
 ・リスト作成画面において、登録を削除したNFCタグの再登録ができない不具合を修正した
 
 2012年10月16日 杉本祐介
+1.2.1:
 ・リストにないNFCタグを読み取った際、学生を選択して登録できるようにした
 
 2012年10月10日 杉本祐介
+1.2.0:
 ・サーバに関しての設定項目を追加した
 ・送信に失敗した出席データを再送するようにした
 ・PreferenceUtilクラスの一部メソッドの仕様を変更した
