2012年11月14日 杉本祐介 1.8.1: ・学生登録画面実装への準備

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,9 @@
 2012年11月14日 杉本祐介
 1.8.1:
+・学生登録画面実装への準備
+
+2012年11月14日 杉本祐介
+1.8.1:
 ・学生マスタのインスタンスをアプリケーション全体で共有するようにした
   これに伴い、CustomApplicationクラスを追加した。
 ・学生マスタに読み込み時の各動作に対応したリスナクラスを追加した
