2012年11月21日 杉本祐介 1.9.0: ・一部のコメントの書き方を変更した ・NFCタグを読み取ると、自動保存が複数回行われる不具合を修正した ・スプラッシュ画面でバックボタンが押された場合、メイン画面を起動しないようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2012年11月21日 杉本祐介
+1.8.1:
+・一部のコメントの書き方を変更した
+・NFCタグを読み取ると、自動保存が複数回行われる不具合を修正した
+・スプラッシュ画面でバックボタンが押された場合、メイン画面を起動しないようにした
+
 2012年11月14日 杉本祐介
 1.8.1:
 ・学生登録画面実装への準備
