2012年11月21日 杉本祐介 1.9.0: ・学生登録画面を実装した

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,6 @@
 2012年11月21日 杉本祐介
-1.8.1:
+1.9.0:
+・学生登録画面を実装した
 ・一部のコメントの書き方を変更した
 ・NFCタグを読み取ると、自動保存が複数回行われる不具合を修正した
 ・スプラッシュ画面でバックボタンが押された場合、メイン画面を起動しないようにした
