--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="menu_add_attendance">出席データを追加する</string>
     <string name="menu_refresh">マスタを再読み込み</string>
     <string name="menu_read_from_csv_file">追加読み込み</string>
+    <string name="menu_open_register">学生登録画面を開く</string>
     <string name="menu_operation">操作</string>
 
     <string name="dialog_ask">確認</string>
@@ -188,6 +189,7 @@
     <string name="dialog_operation_menu_title">操作</string>
     <string name="dialog_operation_menu_search">学生番号で検索する</string>
     <string name="dialog_operation_menu_add">学生を追加する</string>
+    <string name="dialog_ask_open_register">学生登録画面を開きますか?</string>
 
     <string name="notice_student_master_opening">を読み込み中…</string>
     <string name="notice_refresh_finish">読み込み完了</string>
