2012年11月28日 杉本祐介 1.9.1: ・トップページもサーブレットで表示するようにした ・ログイン状況をセッションで管理するようにした ・サーブレットで学生リストを表示する際、JavaScriptで更新するようにした ・ログイン時であれば、特定の所属の学生リストを表示できるようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2012年11月28日 杉本祐介
+1.9.1:
+・トップページもサーブレットで表示するようにした
+・ログイン状況をセッションで管理するようにした
+・サーブレットで学生リストを表示する際、JavaScriptで更新するようにした
+・ログイン時であれば、特定の所属の学生リストを表示できるようにした
+
 2012年11月21日 杉本祐介
 1.9.0:
 ・学生登録画面を実装した
