2012年12月6日 杉本祐介 ・学生リストの表示と学生の検索結果の表示を同じサーブレットで行えるようにした ・リスト表示サーブレットにおいて、ソートを行えるようにした ・リスト表示サーブレットにおいて、50人ごとに区切って表示するようにした ・ブラウザでの学生リストの見た目を変更した ・ブラウザでの画像の表示にlightboxを使用するようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2012年12月6日 杉本祐介
+・学生リストの表示と学生の検索結果の表示を同じサーブレットで行えるようにした
+・リスト表示サーブレットにおいて、ソートを行えるようにした
+・リスト表示サーブレットにおいて、50人ごとに区切って表示するようにした
+・ブラウザでの学生リストの見た目を変更した
+・ブラウザでの画像の表示にlightboxを使用するようにした
+
 2012年11月28日 杉本祐介
 1.9.1:
 ・トップページもサーブレットで表示するようにした
