2013年2月6日 杉本祐介 1.10.1: ・災害時用の画面の名称を安否確認画面に変更した ・NFCタグのIDを元の桁数のまま扱うようにした

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2013年2月6日 杉本祐介
+1.10.1:
+・災害時用の画面の名称を安否確認画面に変更した
+・NFCタグのIDを元の桁数のまま扱うようにした
+
 2012年12月6日 杉本祐介
 1.10.0:
 ・学生リストの表示と学生の検索結果の表示を同じサーブレットで行えるようにした
